FPGA_Files/Software/.metadata/.plugins/org.eclipse.cdt.ui/xaxidma_example_simple_poll_1.build.log
17:21:35 **** Incremental Build of configuration Debug for project xaxidma_example_simple_poll_1 ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/xaxidma_example_simple_poll.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xaxidma_example_simple_poll.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/GitHub/ReconHardware/FPGA_Files/Software/pr_led/export/pr_led/sw/pr_led/standalone_domain/bspinclude/include -MMD -MP -MF"src/xaxidma_example_simple_poll.d" -MT"src/xaxidma_example_simple_poll.o" -o "src/xaxidma_example_simple_poll.o" "../src/xaxidma_example_simple_poll.c"
../src/xaxidma_example_simple_poll.c: In function 'main':
../src/xaxidma_example_simple_poll.c:114:37: error: 'DMA_DEV_ID' undeclared (first use in this function)
  114 |  Status = XAxiDma_SimplePollExample(DMA_DEV_ID);
      |                                     ^~~~~~~~~~
../src/xaxidma_example_simple_poll.c:114:37: note: each undeclared identifier is reported only once for each function it appears in
../src/xaxidma_example_simple_poll.c: In function 'XAxiDma_SimplePollExample':
../src/xaxidma_example_simple_poll.c:65:26: error: 'MEM_BASE_ADDR' undeclared (first use in this function)
   65 | #define TX_BUFFER_BASE  (MEM_BASE_ADDR + 0x00100000)
      |                          ^~~~~~~~~~~~~
../src/xaxidma_example_simple_poll.c:153:22: note: in expansion of macro 'TX_BUFFER_BASE'
  153 |  TxBufferPtr = (u8 *)TX_BUFFER_BASE ;
      |                      ^~~~~~~~~~~~~~
../src/xaxidma_example_simple_poll.c: In function 'CheckData':
../src/xaxidma_example_simple_poll.c:66:26: error: 'MEM_BASE_ADDR' undeclared (first use in this function)
   66 | #define RX_BUFFER_BASE  (MEM_BASE_ADDR + 0x00300000)
      |                          ^~~~~~~~~~~~~
../src/xaxidma_example_simple_poll.c:251:20: note: in expansion of macro 'RX_BUFFER_BASE'
  251 |  RxPacket = (u8 *) RX_BUFFER_BASE;
      |                    ^~~~~~~~~~~~~~
'Finished building: ../src/xaxidma_example_simple_poll.c'
' '

17:21:35 Build Finished (took 359ms)

